# cherta

./: Cargo.toml  README.md
.pkgconfig/: wayland-client.pc  wayland-cursor.pc  wayland-egl.pc  wayland-scanner.pc
shaders/: fragment.glsl  vertex.glsl
src/: config.rs  main.rs  renderer.rs  wayland.rs
