[package]
name = "cherta"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-egl = "0.32"
glutin = "0.32"
khronos-egl = "6.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
strip = true
lto = true
